# Same_LS_for_Linux

./: CMakeLists.txt  README.md  install.sh  main.c  uninstall.sh  update.sh
